# ior

./: README  configure.ac
doc/: USER_GUIDE
src/: Makefile.am  aiori-DAOS.c  aiori.h  ior.c  ior.h  parse_options.c
